Registration Mobile Number field, api URL shufflings, multiple bug fixes

--- a/src/assets/scss/core/layouts/_content.scss
+++ b/src/assets/scss/core/layouts/_content.scss
@@ -22,7 +22,7 @@ html {
       padding: 0;
       position: relative;
       transition: 300ms ease all;
-      backface-visibility: hidden;
+      // backface-visibility: hidden;
       min-height: calc(100% - 4rem);
       margin-left: $menu-expanded-width;
       &.app-content {
